Fix tooltip alignement

--- a/src/app/views/jobs/jobs.component.scss
+++ b/src/app/views/jobs/jobs.component.scss
@@ -3,7 +3,8 @@
 
 .map-container {
   .tooltip-top {
-    width: 50%;
+    width: 80%;
+    max-width: 400px;
     height: 0;
     margin: 0 auto;
 
